public/css/5c3.css
body{
	padding-top: 55px;
}

img{
	border: 0px;
}


.popunder{
	max-height: 0px;
	overflow: scroll;
}

@media (min-device-width: 1025px) {
	.popunder{
		-webkit-transition: all 0.6s ease-in-out;
		-moz-transition: all 0.6s ease-in-out;
		-o-transition: all 0.6s ease-in-out;
		transition: all 0.6s ease-in-out;
	}
}

.popundercontent{
	padding: 20px;
	margin-bottom: 1.3%;
	background: url("../img/whitey.png");
	border-top: 1px #aaa solid;
	border-bottom: 1px #aaa solid;
	box-shadow: inset 0px 1px 7px rgba(0,0,0,0.5);
}

.popunder h1 {
	margin-bottom: 0;
	font-size: 2.2em;

}

.popunder h2 {
	margin-top: 0;
	font-weight: 200;
	font-size: 1.5em;
}

.typeahead_event, .typeahead_person{
	line-height: 0.7em;
}

.typeahead li a {
	border-bottom: 1px #e5e5e5 solid;
}


.typeahead_event h1, .typeahead_event h2, .typeahead_person h1{
	margin: 0;
	line-height: 1em;
}


.typeahead_event h1, .typeahead_person h1{
	font-size: 1em;
	padding: 5px;
	margin-left: 70px;
	line-height: 100%;
	overflow: hidden;
	text-overflow: ellipsis;

}
.typeahead_event h2{
	font-size: 1em;
	font-weight: normal;
	overflow: hidden;
	padding: 0px 5px;
	margin-left: 70px;
	text-overflow: ellipsis;
}

.typeahead_event img, .typeahead_person img{
	display: inline;
	float:left;
	width: 64px;
	height: 64px;
}

.typeahead.dropdown-menu li > a {
	padding-top: 0px !important;
	white-space: normal;
	overflow: hidden;
	left: auto !important;
	right: 10px;
	width: 400px;
}

.typeahead .active .muted {
	color: white;
}

.typeahead li a {
	height: 64px;
}

.typeahead li[data-extraclass="firstevent"] :first-child:before {
	content: "Events";
}
.typeahead li[data-extraclass="firstspeaker"] :first-child:before {
	content: "Speakers";
}


[data-extraclass="firstevent"]:before {
	content: "Events";
}
[data-extraclass="firstspeaker"]:before {
	content: "Speakers";
}

.typeahead li[data-extraclass="firstevent"]:before, .typeahead li[data-extraclass="firstspeaker"]:before {
	display: block;
	border-top: 1px solid #c9c8c9;
	border-bottom: 1px solid #c9c8c9;
	padding: 2px 10px;
	background: #f7f6f6; /* Old browsers */
	background: -moz-linear-gradient(top, hsl(0,6%,97%) 0%, hsl(0,0%,93%) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,hsl(0,6%,97%)), color-stop(100%,hsl(0,0%,93%))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, hsl(0,6%,97%) 0%,hsl(0,0%,93%) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, hsl(0,6%,97%) 0%,hsl(0,0%,93%) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, hsl(0,6%,97%) 0%,hsl(0,0%,93%) 100%); /* IE10+ */
	background: linear-gradient(to bottom, hsl(0,6%,97%) 0%,hsl(0,0%,93%) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f6f6', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
	color: #222;
	font-weight: bold;
}

.dropdown-menu li > a {
	padding: 0 !important;
}

.item{
	margin: 0px;
	margin-bottom: 1.3%;
	position: relative;

	box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
}


.item .info {
	position: absolute;
	left: 0;
	bottom: 0;
	color: #DDDDDD;
	width: 100%;
	background: rgba(0, 0, 0, 0.7); 
}

.item h1, .item h2 {
	margin: 0;
	padding: 5px 10px;
	color: white;
	line-height: 1.2em;
	overflow: hidden;
	font-weight: 200;
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	-ms-hyphens: auto;
	hyphens: auto;
}

@-webkit-keyframes glow {
	0% {
		-webkit-box-shadow: 0 0 0px #b94a48;
	}
	100% {
		-webkit-box-shadow: 0 0 5px #b94a48;
	}
}

@-moz-keyframes glow {
	0% {
		-moz-box-shadow: 0 0 0px #b94a48;
	}
	100% {
		-moz-box-shadow: 0 0 5px #b94a48;
	}
}


#content .live {
	-webkit-animation-name: glow;
	-webkit-animation-direction: alternate;
	-webkit-animation-duration: 700ms;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: ease-in-out;

	-moz-animation-name: glow;
	-moz-animation-direction: alternate;
	-moz-animation-duration: 700ms;
	-moz-animation-iteration-count: infinite;
	-moz-animation-timing-function: ease-in-out;


	border: 1px solid #eed3d7;
}


.live-indicator {
	color: #b94a48;
	position: absolute;
	top: 5px;
	right: 5px;
	z-index: 200;
}


.item h1 {
	font-size: 0.9em;
}

.item h2 {
	font-size: 0.8em;
	display: none;
}

@media (min-device-width: 1025px) {
	.item:hover h2 {
		display: block;
	}
}



.item video {
	display: none;
	width: 100%;
	height: 100%;
}

.item .thumb {
	padding: 0;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.player {
	width: 50%;
	float: right;
	padding-left: 30px;
	padding-bottom: 20px;
	padding-top: 20px;
}



.navbar .form-inline, .navbar .navbar-inner .btn-group{
	margin: 0px;
}

.navbar .btn-toolbar {
	margin-top: 5px;
	margin-bottom: 5px;
}

